--- a/goodness/styles/style.css
+++ b/goodness/styles/style.css
@@ -145,7 +145,37 @@ footer p a:hover {
     opacity: .3;
     transform: scale(0.6);
 }
+/* Quote  Page */
+#Goodness-quotes{
+display: grid;
+text-align: center;
+}
 
+#picture-img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+#quote-1{
+    border: 0.5px solid #5F5143;
+    border-radius: 10% / 50%;
+    padding: 5px;
+    text-align: center;
+  }
+#quote-2{
+    border: 0.5px solid #5F5143;
+    border-radius: 10px 100px / 120px;
+    padding: 5px;
+    text-align: center;
+  }
+#quote-3{
+    border: 0.5px solid #5F5143;
+    border-radius: 50% 20% / 10% 40%;
+    padding: 5px;
+    text-align: center;
+  }
 /* Contact Us Page */
 
 /* Style inputs, select elements and textareas */
