--- a/goodness/styles/style.css
+++ b/goodness/styles/style.css
@@ -190,7 +190,7 @@ input[type=text], select, textarea{
   
   /* Style the label to display next to the inputs */
   label {
-    padding: 12px 12px 12px 12px 0;
+    padding: 12px;
     display: inline-block;
   }
   
@@ -291,4 +291,3 @@ input[type=text], select, textarea{
         margin-top: 25px;
     }
 }
-
